openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metalayer
  labels:
    app: metalayer
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: metalayer
