openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: metalayer
  labels:
    app: metalayer
spec:
  to:
    kind: Service
    name: metalayer
  port:
    targetPort: 8000
